--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
         <button class="login__btn">&rarr;</button>
       </form>
     </nav>
-
+    <p class="info">Acc1: js pin: 1111</p>
+    <br />
+    <p class="info">Acc2: jd pin: 2222</p>
     <main class="app">
       <!-- BALANCE -->
       <div class="balance">
